@@ -100,6 +100,7 @@
     Cantata's Gtk3 style sin boxes are mimiced using a spin-box with no
     buttons, and 2 toolbuttons. QGtkStyle messes up the widget focus if this is
     used, so Cantata's spin box attempts to work-around this.
+58. Improve look of Gtk3 style spinbox.
 
 0.9.2
 -----
